working on horizontal scroll mobile issue

--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ red: #E43B20
 }
 
 html{
-    max-width: 100%;
+    max-width: 100vw;
     /*overflow-x: hidden;*/
 }
 
 body{
-    max-width: 100%;
+    max-width: 100vw;
     overflow-x: hidden;
     color: white;
     /*
@@ -67,6 +67,7 @@ section.content{
 .hero{
     height: 100vh;
     text-align: center;
+    overflow-x: hidden;
 }
 
 .hero-text-container{
@@ -151,7 +152,7 @@ nav{
 
 ul.nav-list{
     padding: 0px;
-    width: 96vw;
+    width: 94vw;
     height: 100px;
 }
 
